fix(forum_tests): fix and cleanup tests for forum repositories, mappers and entities